[gd_scene load_steps=19 format=3 uid="uid://x5ja5pwbqnxs"]

[ext_resource type="Script" uid="uid://bsunufwuqmm1r" path="res://Esenas/Jugador/Jugador.gd" id="1_7ab0y"]
[ext_resource type="Texture2D" uid="uid://cgfvvg1ejgpi7" path="res://Personajes/Attack/Personaje_attack_1.png" id="2_n3r1b"]
[ext_resource type="Texture2D" uid="uid://dorjhvexmfkwp" path="res://Personajes/Attack/Personaje_attack_2.png" id="3_ohg27"]
[ext_resource type="Texture2D" uid="uid://vmxjd25g2kyc" path="res://Personajes/Attack/Personaje_attack_3.png" id="4_25hrm"]
[ext_resource type="Texture2D" uid="uid://ddgibfug856jp" path="res://Personajes/Idle/Personaje_idle_1.png" id="5_c33fs"]
[ext_resource type="Texture2D" uid="uid://ccgcqpffokeoe" path="res://Personajes/Idle/Personaje_idle_2.png" id="6_nliy0"]
[ext_resource type="Texture2D" uid="uid://dqssnvrremuw5" path="res://Personajes/Idle/Idle Interactions/Personaje_idle_1.png" id="7_oysdk"]
[ext_resource type="Texture2D" uid="uid://bi5vlhyp1ywh4" path="res://Personajes/Idle/Idle Interactions/Personaje_idle_2.png" id="8_d1hyu"]
[ext_resource type="Texture2D" uid="uid://cr3y73opn1wdp" path="res://Personajes/Idle/Idle Interactions/Personaje_idle_3.png" id="9_aaqet"]
[ext_resource type="Texture2D" uid="uid://teeu0qt1alu1" path="res://Personajes/Run/Personaje_run3.png" id="10_0l7l6"]
[ext_resource type="Texture2D" uid="uid://c4s0pdyjw17u6" path="res://Personajes/Run/Personaje_run2.png" id="11_c1cuw"]
[ext_resource type="Texture2D" uid="uid://c54byoqok2fwo" path="res://Personajes/Dead/personaje_dead_2.png" id="12_ak05w"]
[ext_resource type="Texture2D" uid="uid://cravh1p6uw6xe" path="res://Personajes/Dead/personaje_dead_3.png" id="13_t7ql6"]
[ext_resource type="Texture2D" uid="uid://se63fewe3xtx" path="res://Personajes/Run/Personaje_run_1.png" id="14_so3cs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t7uhg"]
radius = 15.0
height = 54.0

[sub_resource type="SpriteFrames" id="SpriteFrames_avfl4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n3r1b")
}, {
"duration": 0.5,
"texture": ExtResource("3_ohg27")
}, {
"duration": 0.5,
"texture": ExtResource("4_25hrm")
}, {
"duration": 0.7,
"texture": ExtResource("3_ohg27")
}],
"loop": true,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_c33fs")
}, {
"duration": 1.0,
"texture": ExtResource("6_nliy0")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("7_oysdk")
}, {
"duration": 3.0,
"texture": ExtResource("8_d1hyu")
}, {
"duration": 15.0,
"texture": ExtResource("9_aaqet")
}, {
"duration": 1.5,
"texture": ExtResource("8_d1hyu")
}],
"loop": true,
"name": &"idleinter",
"speed": 3.0
}, {
"frames": [{
"duration": 2.2,
"texture": ExtResource("6_nliy0")
}, {
"duration": 2.0,
"texture": ExtResource("5_c33fs")
}, {
"duration": 5.0,
"texture": ExtResource("10_0l7l6")
}, {
"duration": 2.0,
"texture": ExtResource("11_c1cuw")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_ak05w")
}, {
"duration": 10.0,
"texture": ExtResource("13_t7ql6")
}],
"loop": true,
"name": &"muerto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_c1cuw")
}, {
"duration": 1.0,
"texture": ExtResource("14_so3cs")
}, {
"duration": 1.0,
"texture": ExtResource("10_0l7l6")
}],
"loop": true,
"name": &"run",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_c1cuw")
}, {
"duration": 1.0,
"texture": ExtResource("10_0l7l6")
}, {
"duration": 1.0,
"texture": ExtResource("14_so3cs")
}],
"loop": true,
"name": &"runrun",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0leuf"]
radius = 19.6186
height = 67.0126

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnoke"]
size = Vector2(69.5256, 20)

[node name="player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(2.39568, 2.20854)
script = ExtResource("1_7ab0y")
velocidad_inicial = 200.0
velocidad_maxima = 500.0
fuerza_salto = -400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_t7uhg")
one_way_collision_margin = 0.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.90735e-06, 0.5)
scale = Vector2(1.03125, 1.01563)
sprite_frames = SubResource("SpriteFrames_avfl4")
animation = &"attack"
frame = 2
frame_progress = 0.200947

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.66967, 0)
shape = SubResource("CapsuleShape2D_0leuf")

[node name="Ataque" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ataque"]
position = Vector2(25.7628, 2)
shape = SubResource("RectangleShape2D_mnoke")

[node name="VidaLabel" type="Label" parent="."]
offset_left = -45.0
offset_top = -50.0
offset_right = -16.0
offset_bottom = -27.0

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Ataque" to="." method="_on_ataque_body_entered"]
